PROD-12-18-19/force-app/main/default/objects/Career_History__c/Career_History__c.object-meta.xml
<CustomObject>
    <label>Career History</label>
    <nameField>
        <label>Career History</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Career History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>