PROD-12-18-19/force-app/main/default/objects/Career_History__c/fields/Candidate_Type__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Type__c</fullName>
    <formula>Candidates__r.RecordType.Name</formula>
    <label>Candidate Type</label>
    <type>Text</type>
</CustomField>