PROD-12-18-19/force-app/main/default/objects/Career_History__c/fields/Candidates__c.field-meta.xml
<CustomField>
    <fullName>Candidates__c</fullName>
    <label>Candidates</label>
    <referenceTo>Candidates__c</referenceTo>
    <relationshipLabel>Career History</relationshipLabel>
    <relationshipName>Career_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>