PROD-12-18-19/force-app/main/default/objects/Career_History__c/fields/Current__c.field-meta.xml
<CustomField>
    <fullName>Current__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current</label>
    <type>Checkbox</type>
</CustomField>