PROD-12-18-19/force-app/main/default/objects/Career_History__c/fields/EndDate1__c.field-meta.xml
<CustomField>
    <fullName>EndDate1__c</fullName>
    <formula>LPAD(TEXT(MONTH(EndDate__c)),2,&quot;0&quot;) + &quot;/&quot; + TEXT(YEAR(EndDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EndDate</label>
    <type>Text</type>
</CustomField>