PROD-12-18-19/force-app/main/default/objects/Career_History__c/validationRules/EndDate_Cannot_Be_Before_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDate_Cannot_Be_Before_StartDate</fullName>
    <active>true</active>
    <description>SS: 2-11-19: Created to restrict BHS users  entering Start date before End date.</description>
    <errorConditionFormula>EndDate__c &lt; StartDate__c</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>End Date cannot be before Start Date.</errorMessage>
</ValidationRule>