PROD-12-18-19/force-app/main/default/objects/Career_History__c/validationRules/EndDate_Required_whn_Current_Not_Checked.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDate_Required_whn_Current_Not_Checked</fullName>
    <active>true</active>
    <description>When Current field is not checked end date is required.</description>
    <errorConditionFormula>AND(  Current__c = False , ISNULL(EndDate__c)
)</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>End Date is required when Current field is not checked.</errorMessage>
</ValidationRule>